Fix icon positioning on mobile

--- a/frontend/src/components/toolbar/Toolbar/styles.scss
+++ b/frontend/src/components/toolbar/Toolbar/styles.scss
@@ -78,6 +78,7 @@
           display: block;
           line-height: 20px;
           margin-top: 5px;
+          width: 100%;
         }
         .label {
           display: block;
